# Aim-Trainer

./: CMakeLists.txt  README.md
.cs211/lib/catch/: CMakeLists.txt
src/: ball.cxx  ball.hxx  character.cxx  character.hxx  controller.cxx  controller.hxx  crosshair.cxx  crosshair.hxx  menu.cxx  menu.hxx  model.cxx  model.hxx  option.cxx  option.hxx  view.cxx  view.hxx
test/: model_test.cxx
